# clef

./: .gitignore  README.md  music_transcription.py  pyproject.toml  requirements.txt
configs/: clef_piano_base.yaml  clef_piano_base_single_head.yaml  clef_piano_full.yaml  clef_piano_tiny.yaml  mt3_evaluate.yaml  transkun_beyer_evaluate.yaml  zeng_augmentation.json
docs/: A1-V1-comparison.md  asap_error_report.md  baseline-mt3-plan.md  clef-piano-base-model-design.md  clef-piano-base-pipeline.md  clef-plan.md  data-pipeline-implementation.md  dataset-summary.md  dataset_error_report.md  decision-record.md  evaluation-flow-diagram.md  evaluation-protocol.md  experiment-design-multi-instrument.md  experiment-design-single-instrument.md  experiment-design-solo.md  experiment-design-tutti.md  experiment-design.md  experiment-result.md  kth-data-augmentation.md  model-comparison.md  model-structure-and-comparison.md  mt3_evaluate_plan.md  reviewer-response-template.md
notebooks/: mt3_batch_transcribe.ipynb
results/: mv2h_results.csv
scripts/: analyze_ca_levels.py  download_piano_soundfonts.sh  filter_mt3_by_zeng_samples.sh  mt3_inference.sh  mt3_workers.sh  mt3_workers_3only.sh  run_mt3_evaluate_pipeline.sh  run_mt3_pipeline.sh  setup_musescore.sh
src/: __init__.py
src/analysis/: analyze_mv2h_results.py
src/audio/: __init__.py  converter.py  mel.py  separator.py  zeng_synthesis.py
src/audio/humanize/: README.md  __init__.py  cli.py  config.py  convert.py  engine.py  metadata.py  non_chord_tone.py  presets.py
src/audio/humanize/analysis/: __init__.py
src/audio/humanize/rules/: __init__.py  articulation.py  articulation_tempo.py  base.py  duration_contrast.py  dynamics_tempo.py  fermata.py  final_ritard.py  high_loud.py  jitter.py  leap.py  melodic_charge.py  ornaments.py  pedal.py  phrase_arch.py  punctuation.py  repetition.py  rubato.py  safety.py  tempo.py  (+2 more)
src/baselines/mt3/: README.md  mt3_evaluate.py  mt3_inference.sh  run_mt3_evaluate_pipeline.sh  setup_musescore.sh
src/baselines/transkun_beyer/: 01_run_transkun.sh  02_run_beyer.sh  03_run_mv2h.sh  README.md  __init__.py  beyer_inference.py  transkun_beyer_evaluate.py  transkun_inference.py
src/baselines/zeng/: __init__.py  synthesis.py
src/clef/: __init__.py  attention.py  bar_tracker.py  bimamba.py  bridge.py  cif.py  collate.py  config.py  data.py  decoder.py  flow.py  swin.py
src/clef/clef_piano/: __init__.py
src/clef/piano/: __init__.py  clef_piano_inference.py  clef_piano_tiny.py  clef_piano_tiny_inference.py  config.py  ctc_target.py  generate_zeng_augmentation_metadata.py  guided_attn.py  model.py  prepare_asap_manifest.py  prepare_zeng_pretrain.py  run_clef_piano_inference.sh  sanity_check.py  tokenizer.py  train.py  train_ddp.sh  train_ddp_tiny.sh  train_single_gpu.sh  train_tiny_single_gpu.sh
src/clef/solo/: __init__.py
src/clef/tutti/: __init__.py
src/datasets/: __init__.py
src/datasets/syn/: __init__.py  failed_kerns.txt  skip_files.txt  syn_dataset.py  syn_manifest.py
src/evaluation/: README.md  asap.py  batch_evaluate_mv2h.py  mt3_evaluate.py  mv2h.py  test_chunk_set.csv
src/evaluation/asap/: __init__.py  test_chunk_set.csv
src/evaluation/syn/: __init__.py  eval.py
src/inference/: README.md  __init__.py  batch_transcribe.py  mt3_to_musicxml.py
src/preprocessing/: __init__.py  humsyn_processor.py  musesyn_processor.py  prepare_zeng_pretrain.py
src/score/: __init__.py  clean_kern.py  expand_repeat.py  generate_score.py  generator.py  kern_repeat.py  kern_tokenizer.py  kern_zeng_compat.py  parser.py  reconstruct_kern.py  rhythm_quantizer.py  sanitize_kern.py  sanitize_piano_score.py
src/utils/: __init__.py  device.py  seed.py  temp.py
tests/: __init__.py  test_audio.py  test_ddp.sh  test_reconstruct_kern.py  test_score.py
