[tool.poetry]
name = "clef"
version = "0.1.0"
description = "Audio-to-Score Transcription via Vision-Language Models - Hearing as Seeing"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/clef"
keywords = ["music", "transcription", "audio", "score", "vision-transformer", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.10.17"

# === Core Deep Learning ===
torch = "^2.5.0"
torchaudio = "^2.5.0"
transformers = "^4.51.0"

# === Audio Processing ===
librosa = "^0.10.0"
soundfile = "^0.12.0"
nnAudio = "^0.3.3"
pedalboard = "^0.9.0"

# === Music Score Handling ===
music21 = "9.9.1"
converter21 = "4.0.0"

# === Scientific Computing ===
numpy = "^1.26.0"
scipy = "^1.14.0"
pandas = "^2.2.0"

# === Utilities ===
tqdm = "^4.66.0"
pyyaml = "^6.0.0"
pyloudnorm = "^0.2.0"
midi2audio = "^0.1.1"
mido = "^1.3.3"

[tool.poetry.group.separation]
optional = true

[tool.poetry.group.separation.dependencies]
# Source separation (optional, for preprocessing)
# Note: demucs requires lameenc which may need to be built from source on Apple Silicon
demucs = "^4.0.0"

[tool.poetry.group.synthesis]
optional = true

[tool.poetry.group.synthesis.dependencies]
# Audio synthesis for TDR data generation
pyfluidsynth = "^1.3.0"

[tool.poetry.group.dev.dependencies]
# Development tools
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
ipython = "^8.0.0"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"

[tool.poetry.scripts]
clef = "src.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# === Tool Configurations ===

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | paper
  | plans
)/
'''

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "paper",
    "plans",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "paper/",
    "plans/",
    "tests/",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
